Fixed icons misaligned with and below the baseline

--- a/styles/linter-ui.less
+++ b/styles/linter-ui.less
@@ -154,7 +154,7 @@ atom-text-editor.editor .linter-highlight, .linter-highlight {
   }
   span.icon::before {
     font-size: 12px;
-    vertical-align: middle;
+    vertical-align: baseline;
   }
   &.hide-config, &.hide-pane {
     display: none;
